k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: DungeonVault4e
spec:
  type: ClusterIP
  selector:
    app: DungeonVault4e
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
