k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: DungeonVault4e
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
    - host: ${SITE_ADDRESS}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: DungeonVault4e
                port:
                  number: 80
  tls:
    - hosts:
        - ${SITE_ADDRESS}
      secretName: ${TLS_SECRET_NAME}
